chore: rename phpstan types to not cause conflicts

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -24,24 +24,24 @@ parameters:
         AlignmentTune: 'array{alignment: array{alignment: "left"|"center"|"right"}}'
         CombinedTunes: 'array{xutimAnchor: array{anchor: string}, alignment: array{alignment: "left"|"center"|"right"}}'
 
-        ListBlock: 'array{ id: string, type: "list", data: array{ style: "unordered"|"ordered"|"checklist", meta: array{start: int, counterType: string}, items: array<int, array{content: string, meta:string, items: array<int, mixed>}>}, tunes: CombinedTunes }'
-        ParagraphBlock: 'array{ id: string, type: "paragraph", data: array{text: string}, tunes: CombinedTunes }'
-        DelimiterBlock: 'array{ id: string, type: "delimiter", data: array{}, tunes: XutimAnchorTune }'
-        HeaderBlock: 'array{ id: string, type: "header", data: array{text: string, level: int}, tunes: CombinedTunes }'
-        MainHeaderBlock: 'array{ id: string, type: "mainHeader", data: array{pretitle: string, title: string, subtitle: string}, tunes: XutimAnchorTune }'
-        QuoteBlock: 'array{ id: string, type: "quote", data: array{text: string, caption: string}, tunes: CombinedTunes }'
-        BlockBlock: 'array{ id: string, type: "block", data: array{code: string}, tunes: XutimAnchorTune }'
-        XutimImageBlock: 'array{ id: string, type: "xutimImage", data: array{file: array{url: string, id: string, thumbnailUrl: string}}, tunes: XutimAnchorTune }'
-        XutimFileBlock: 'array{ id: string, type: "xutimFile", data: array{file: array{url: string, id: string}}, tunes: XutimAnchorTune }'
-        ImageRowBlock: 'array{ id: string, type: "imageRow", data: array{images: array<int, array{url: string, id: string, thumbnailUrl: string}>}, tunes: XutimAnchorTune }'
-        EmbedBlock: 'array{ id: string, type: "embed", data: array{service: string, source: string, embed: string, width: int, height: int, caption: string}, tunes: XutimAnchorTune }'
-        PageLinkBlock: 'array{ id: string, type: "pageLink", data: array{id: string}, tunes: XutimAnchorTune }'
-        ArticleLinkBlock: 'array{ id: string, type: "articleLink", data: array{id: string}, tunes: XutimAnchorTune }'
-        XutimTagBlock: 'array{ id: string, type: "xutimTag", data: array{id: string, layout: string}, tunes: XutimAnchorTune }'
-        FoldableStartBlock: 'array{ id: string, type: "foldableStart", data: array{title: string, open: bool}, tunes: XutimAnchorTune }'
-        FoldableEndBlock: 'array{ id: string, type: "foldableEnd", data: array{}, tunes: XutimAnchorTune }'
+        EditorJsListBlock: 'array{ id: string, type: "list", data: array{ style: "unordered"|"ordered"|"checklist", meta: array{start: int, counterType: string}, items: array<int, array{content: string, meta:string, items: array<int, mixed>}>}, tunes: CombinedTunes }'
+        EditorJsParagraphBlock: 'array{ id: string, type: "paragraph", data: array{text: string}, tunes: CombinedTunes }'
+        EditorJsDelimiterBlock: 'array{ id: string, type: "delimiter", data: array{}, tunes: XutimAnchorTune }'
+        EditorJsHeaderBlock: 'array{ id: string, type: "header", data: array{text: string, level: int}, tunes: CombinedTunes }'
+        EditorJsMainHeaderBlock: 'array{ id: string, type: "mainHeader", data: array{pretitle: string, title: string, subtitle: string}, tunes: XutimAnchorTune }'
+        EditorJsQuoteBlock: 'array{ id: string, type: "quote", data: array{text: string, caption: string}, tunes: CombinedTunes }'
+        EditorJsCodeBlock: 'array{ id: string, type: "block", data: array{code: string}, tunes: XutimAnchorTune }'
+        EditorJsXutimImageBlock: 'array{ id: string, type: "xutimImage", data: array{file: array{url: string, id: string, thumbnailUrl: string}}, tunes: XutimAnchorTune }'
+        EditorJsXutimFileBlock: 'array{ id: string, type: "xutimFile", data: array{file: array{url: string, id: string}}, tunes: XutimAnchorTune }'
+        EditorJsImageRowBlock: 'array{ id: string, type: "imageRow", data: array{images: array<int, array{url: string, id: string, thumbnailUrl: string}>}, tunes: XutimAnchorTune }'
+        EditorJsEmbedBlock: 'array{ id: string, type: "embed", data: array{service: string, source: string, embed: string, width: int, height: int, caption: string}, tunes: XutimAnchorTune }'
+        EditorJsPageLinkBlock: 'array{ id: string, type: "pageLink", data: array{id: string}, tunes: XutimAnchorTune }'
+        EditorJsArticleLinkBlock: 'array{ id: string, type: "articleLink", data: array{id: string}, tunes: XutimAnchorTune }'
+        EditorJsXutimTagBlock: 'array{ id: string, type: "xutimTag", data: array{id: string, layout: string}, tunes: XutimAnchorTune }'
+        EditorJsFoldableStartBlock: 'array{ id: string, type: "foldableStart", data: array{title: string, open: bool}, tunes: XutimAnchorTune }'
+        EditorJsFoldableEndBlock: 'array{ id: string, type: "foldableEnd", data: array{}, tunes: XutimAnchorTune }'
 
-        EditorBlocksUnion: ListBlock|ParagraphBlock|DelimiterBlock|HeaderBlock|MainHeaderBlock|QuoteBlock|BlockBlock|XutimFileBlock|XutimImageBlock|ImageRowBlock|EmbedBlock|PageLinkBlock|ArticleLinkBlock|XutimTagBlock|FoldableStartBlock|FoldableEndBlock
+        EditorBlocksUnion: EditorJsListBlock|EditorJsParagraphBlock|EditorJsDelimiterBlock|EditorJsHeaderBlock|EditorJsMainHeaderBlock|EditorJsQuoteBlock|EditorJsCodeBlock|EditorJsXutimFileBlock|EditorJsXutimImageBlock|EditorJsImageRowBlock|EditorJsEmbedBlock|EditorJsPageLinkBlock|EditorJsArticleLinkBlock|EditorJsXutimTagBlock|EditorJsFoldableStartBlock|EditorJsFoldableEndBlock
         EditorBlock: 'array{}|array{ time: int, version: string, blocks: array<int, EditorBlocksUnion> }'
         NonEmptyEditorBlock: 'array{ time: int, version: string, blocks: non-empty-array<int, EditorBlocksUnion> }'
 
