--- a/composer.json
+++ b/composer.json
@@ -75,7 +75,8 @@
         "twig/twig": "^3.20",
         "ua-parser/uap-php": "^3.10",
         "webmozart/assert": "^1.11",
-        "xutim/domain": "dev-main"
+        "xutim/domain": "dev-main",
+        "jcupitt/vips": "^2.6"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^8.2",
