--- a/tests/Application/.env
+++ b/tests/Application/.env
@@ -3,5 +3,5 @@ APP_SECRET=test_secret_key_1234567890
 DATABASE_URL="postgresql://postgres:postgres@127.0.0.1:5432/xutim?serverVersion=15&charset=utf8"
 MERCURE_URL=http://localhost:3000/.well-known/mercure
 MERCURE_PUBLIC_URL=http://localhost:3000/.well-known/mercure
-MERCURE_JWT_SECRET=test_mercure_secret
+MERCURE_JWT_SECRET=test_mercure_secret_that_is_long_enough_for_256_bits!
 MAILER_DSN=null://null?enable_profiler=true
